<resources>
    <string name="app_name">GroupeA07_Mobile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Buttons-->
    <string name="intro_login">Login</string>
    <string name="intro_reset">Reset</string>

    <string name="txt_pwd">Password</string>

    <string name="txt_objects">Objects</string>
    <string name="txt_users">Manage users</string>
    <string name="txt_register">Register</string>
    <string name="txt_username">Username</string>
    <string name="txt_login">Login</string>
    <string name="txt_email">Email</string>
    <string name="txt_confirm_pwd">Confirm password</string>
    <string name="txt_history">Sales history</string>
    <string name="txt_return">Return</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_promote">+ Moderator</string>
    <string name="txt_demote">- Moderator</string>
    <string name="txt_buy">Buy</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_add_object">Add object</string>

    <string name="title_activity_register">Sign in</string>

    <string name="txt_name_object">Name object</string>
    <string name="txt_price_object">Price object</string>
    <string name="txt_description_object">Description object</string>
    <string name="txt_cat_object">Category object</string>
    <string name="txt_password">Password</string>
    <string name="txt_welcome">Saler site !</string>
    <string name="txt_go_to_website">Go to website</string>
    <string name="reset">Reset</string>

    <string name="txt_euro"> €</string>
    <string name="txt_title_desc">Description : </string>
    <string name="txt_title_cat">Category : </string>
</resources>
