<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:gravity="center">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/menu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"/>


    <Button
        android:id="@+id/menu_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"

        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="20px"/>

    <Button
        android:id="@+id/menu_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_logout"

        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="20px"/>

    <Button
        android:id="@+id/menu_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"

        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="20px"/>

    <Button
        android:id="@+id/menu_addObject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Add Object"

        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="20px"/>

    <Button
        android:id="@+id/menu_objects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_objects"

        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="20px"/>

    <Button
        android:id="@+id/menu_users"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_users"

        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="20px"/>

    <Button
        android:id="@+id/menu_sold_objects"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_history"

        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="20px"/>

    <Button
        android:id="@+id/menu_go_to_website"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_go_to_website"

        android:background="@drawable/button_shape"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="20px"/>

</LinearLayout>
