<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

        <!-- Toolbar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/add_object_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_name_object" />


        <EditText
            android:id="@+id/et_log_nameobject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_name_object" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_price_object" />

        <EditText
            android:id="@+id/et_log_priceobject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_price_object"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_description_object" />

        <EditText
            android:id="@+id/et_log_descriptionobject"
            android:layout_width="match_parent"
            android:hint="@string/txt_description_object"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_cat_object" />

        <EditText
            android:id="@+id/et_log_catobject"
            android:layout_width="match_parent"
            android:hint="@string/txt_cat_object"
            android:layout_height="wrap_content" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_addobject"
        android:text="Add Object"/>
</LinearLayout>