<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="3dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:padding="5dp">

        <!-- Text Notice Name -->
        <TextView
            android:id="@+id/txt_id_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="3dp"/>

        <!-- Text Notice Description -->
        <TextView
            android:id="@+id/txt_name_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp" />

        <!-- Text Notice FilePath -->
        <TextView
            android:id="@+id/txt_mail_member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:padding="3dp"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="5dp">
            <Button
                android:id="@+id/bt_row_member_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_delete"/>

            <Button
                android:id="@+id/bt_row_member_promote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_promote"/>

            <Button
                android:id="@+id/bt_row_member_demote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_demote"/>
        </LinearLayout>

    </LinearLayout>



</android.support.v7.widget.CardView>